// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen dnGroups config import-export] should create the dnGroups: the dnGroups have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ dngroup [Environment/cfgObjectTest]
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen dnGroups config import-export] should skip the same dnGroups: the dnGroups have not been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= dngroup [Environment/cfgObjectTest]
Completed. 0 object created. 0 object updated. 1 object skipped.
",
}
`;

exports[`[mutagen dnGroups config import-export] should throw exception when new dnGroups to import miss mandatory properties dnGroups: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - dngroup [Environment/emptyCfgObjectTest]:
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen dnGroups config import-export] should throw exception when updating dnGroups with different values for unchangeable properties: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Unchangeable properties:
  - dngroup [Environment/cfgObjectTest]:
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen dnGroups config import-export] should update the modified dnGroups: the modified dnGroups have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ dngroup [Environment/cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
